国土微信小程序

--- a/已经实现的某些小功能的例子/guotu/wx_miniprogram/pages/index/index.wxml
+++ b/已经实现的某些小功能的例子/guotu/wx_miniprogram/pages/index/index.wxml
@@ -2,7 +2,8 @@
 <view class="menu">
 <view class='item'>
   <image src="/static/setup.bmp"></image>
-  <text >精品</text>
+  <text >查询IP地址是否已经在用</text>
+  <form></form>
 </view>
 <view class='item'>
   <image src="/static/setup.bmp"></image>
