--- a/各种培训/路飞/Django/day16/app01/templates/user_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/user_list.html
@@ -48,7 +48,7 @@
                         <td>{{ obj.dpart.title }}</td>
                         <td>
                             <a class="btn btn-primary btn-xs" href="/depart/{{ obj.id }}/edit/">编辑</a>
-                            <a class="btn btn-danger btn-xs" href="/depart/delete/?nid={{ obj.id }}">删除</a>
+                            <a class="btn btn-danger btn-xs" href="/user/{{ obj.id }}/delete/">删除</a>
                         </td>
                     {% endfor %}
 
