用户添加（通过ModelForm），错误信息提示

--- a/各种培训/路飞/Django/day16/app01/templates/user_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/user_list.html
@@ -9,7 +9,7 @@
             <a class="btn btn-success" href="/user/add/" >
                 <span class="glyphicon glyphicon-plus-sign " aria-hidden="true"></span>
                 新建用户</a>
-            <a class="btn btn-success" href="/user/add/" target="_blank">
+            <a class="btn btn-success" href="/user/model/add/" target="_blank">
                 <span class="glyphicon glyphicon-plus-sign " aria-hidden="true"></span>
                 新建用户ModeForm</a>
         </div>
