--- a/各种培训/路飞/Django/day16/app01/templates/layout.html
+++ b/各种培训/路飞/Django/day16/app01/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>用户管理系统|{% block title %}{% endblock %}</title>
+    <title>联通用户管理系统|{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'plugins/bootstrap-3.4.1/css/bootstrap.min.css' %}">
     <style>
         .navbar {
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">联通用户管理系统</a>
+            <a class="navbar-brand" href="">联通用户管理系统</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
