--- a/各种培训/路飞/Django/day16/app01/templates/user_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/user_list.html
@@ -47,7 +47,7 @@
                         <td>{{ obj.get_gender_display }}</td>
                         <td>{{ obj.dpart.title }}</td>
                         <td>
-                            <a class="btn btn-primary btn-xs" href="/depart/{{ obj.id }}/edit/">编辑</a>
+                            <a class="btn btn-primary btn-xs" href="/user/{{ obj.id }}/edit/">编辑</a>
                             <a class="btn btn-danger btn-xs" href="/user/{{ obj.id }}/delete/">删除</a>
                         </td>
                     {% endfor %}
