跳转页样式的调整

--- a/各种培训/路飞/Django/day16/app01/templates/prettypnum_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/prettypnum_list.html
@@ -63,17 +63,20 @@
 
     <ul class="pagination">
 
-      {{ page_string }}
+        {{ page_string }}
+        <li>
+            <form style="float:left;margin-lef:-1px" method="get">
+
+                <input style="postion:relative;float:left;display:inline-block;width: 80px;border-radius: 0;"
+                       type="text" name="page" class="form-control" placeholder="页码">
+
+            <button style="border-radius: 0" class="btn btn-default" type="submit">跳转</button>
+
+            </form>
+        </li>
     </ul>
 
-    <form method="get" >
-    <div class="input-group" style="20px">
-        <input type="text" name="page" class="form-control" placeholder="页码">
-        <span class="input-group-btn">
-            <button class="btn btn-default" type="submit">跳转</button>
-        </span>
-    </div>
-    </form>
+
 
     </div>
 
