--- a/各种培训/路飞/Django/day16/app01/templates/user_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/user_list.html
@@ -56,7 +56,11 @@
                 </table>
             </div>
         </div>
-
+        <div class="clearfix">
+            <ul class="pagination">
+                {{ page_string }}
+            </ul>
+        </div>
     </div>
 
 {% endblock %}
