--- a/各种培训/路飞/Django/day16/app01/templates/depart_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/depart_list.html
@@ -37,6 +37,10 @@
       </table>
     </div>
   </div>
-
+     <div class="clearfix" >
+            <ul class="pagination">
+             {{ page_string }}
+            </ul>
+        </div>
     </div>
 {% endblock %}
