手机号管理

--- a/各种培训/路飞/Django/day16/app01/templates/user_add.html
+++ b/各种培训/路飞/Django/day16/app01/templates/user_add.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container">
-    <div class="panel panel-default">
+    <div class="panel panel-default col-md-6">
         <div class="panel-heading">
             <h3 class="panel-title">新建用户</h3>
         </div>
