--- a/各种培训/路飞/Django/day16/app01/templates/layout.html
+++ b/各种培训/路飞/Django/day16/app01/templates/layout.html
@@ -34,6 +34,7 @@
                 <li><a href="/depart/list/">部门管理</a></li>
                 <li><a href="/user/list/">用户管理</a></li>
                 <li><a href="/prettynum/list/">靓号管理</a></li>
+                <li><a href="/shoujihao/list/">手机号管理</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
