--- a/各种培训/路飞/Django/day16/app01/templates/prettynum_edit.html
+++ b/各种培训/路飞/Django/day16/app01/templates/prettynum_edit.html
@@ -3,7 +3,7 @@
    <div class="container">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">编辑靓号</h3>
+                <h3 class="panel-title">编辑手机号</h3>
             </div>
             <div class="panel-body">
                 <form method="post" class="panel-body" novalidate>
@@ -13,8 +13,6 @@
                         <label>{{ field.label }}</label>
                         {{ field }}
                         <span style="color: red">{{ field.errors.0 }}</span>
-                        <!--<input type="text" class="form-control" placeholder="姓名" name="name"/>
-                    </div>-->
                     {% endfor %}
 
                     <button type="submit" class="btn btn-primary">提交</button>
