时间选择组件

--- a/各种培训/路飞/Django/day16/app01/templates/layout.html
+++ b/各种培训/路飞/Django/day16/app01/templates/layout.html
@@ -11,6 +11,7 @@
         }
 
     </style>
+    {% block css %} {% endblock %}
 </head>
 <body>
 
@@ -57,14 +58,12 @@
 </nav>
 
 <div>
-
-        {% block content %} {%  endblock %}
-
-  </div>
+    {% block content %} {% endblock %}
+</div>
 
 <script src="{% static 'js/jquery-3.6.1.min.js' %}"></script>
 <script src="{% static 'plugins/bootstrap-3.4.1/js/bootstrap.min.js' %}"></script>
-
+{%  block js %} {% endblock %}
 
 </body>
 </html>
