--- a/各种培训/路飞/Django/day16/app01/templates/user_model_form_add.html
+++ b/各种培训/路飞/Django/day16/app01/templates/user_model_form_add.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
+{% load static %}
+{% block css %}
+    <link rel="stylesheet" href="{% static 'plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css' %}">
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="panel panel-default col-md-6 col-md-offset-3">
@@ -24,4 +28,17 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block js %}
+    <script src="{% static 'plugins/bootstrap-datepicker/js/bootstrap-datepicker.js' %}"></script>
+    <script src="{% static 'plugins/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.js' %}"></script>
+    <script>
+        $("#id_create_time").datepicker({
+            language: 'zh-CN', //语言
+            autoclose: true, //选择后自动关闭
+            clearBtn: true,//清除按钮
+            format: "yyyy-mm-dd"//日期格式
+        });
+    </script>
 {% endblock %}
