管理员列表

--- a/各种培训/路飞/Django/day16/app01/templates/layout.html
+++ b/各种培训/路飞/Django/day16/app01/templates/layout.html
@@ -32,6 +32,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                <li><a href="/admin/list/">管理员账户</a></li>
                 <li><a href="/depart/list/">部门管理</a></li>
                 <li><a href="/user/list/">用户管理</a></li>
                 <li><a href="/prettynum/list/">靓号管理</a></li>
