管理员编辑

--- a/各种培训/路飞/Django/day16/app01/templates/admin_list.html
+++ b/各种培训/路飞/Django/day16/app01/templates/admin_list.html
@@ -48,8 +48,8 @@
                     <td>{{ item.password}}</td>
 
                     <td>
-                        <a class="btn btn-primary btn-xs" href="/prettynum/{{ item.id }}/edit/">编辑</a>
-                        <a class="btn btn-danger btn-xs" href="/prettynum/{{ item.id }}/delete/">删除</a>
+                        <a class="btn btn-primary btn-xs" href="/admin/{{ item.id }}/edit/">编辑</a>
+                        <a class="btn btn-danger btn-xs" href="/admin/{{ item.id }}/delete/">删除</a>
                     </td>
                 {% endfor %}
 
