--- a/各种培训/路飞/Django/day16/app01/templates/change.html
+++ b/各种培训/路飞/Django/day16/app01/templates/change.html
@@ -13,7 +13,7 @@
                         <label>{{ field.label }}</label>
                         {{ field }}
                         <span style="color: red">{{ field.errors.0 }}</span>
-
+                        </div>
                     {% endfor %}
 
                     <button type="submit" class="btn btn-primary">提交</button>
