--- a/各种培训/路飞/Python Web开发专题课/day11_account/templates/register.html
+++ b/各种培训/路飞/Python Web开发专题课/day11_account/templates/register.html
@@ -6,37 +6,39 @@
     <div>
         密码：<input type="password" name="password">
     </div>
-    <input type="submit">
-</form>
-<div>
-    性别：<input type="radio" name="sex">男 <input type="radio" name="sex">女
-</div>
-<div>
-    爱好：<input type="checkbox" name="sex">篮球
-    <input type="checkbox" name="sex">足球
-    <input type="checkbox" name="sex">乒乓球
-</div>
 
-<div>
-    城市:
-    <select>
-        <option value="bj">北京</option>
-        <option value="sh">上海</option>
-        <option value="sz">深圳</option>
-    </select>
-</div>
-<div>
-    领域:
-    <select multiple>
-        <option value="bj">打游戏</option>
-        <option value="sh">上海</option>
-        <option value="sz">深圳</option>
-    </select>
-</div>
-<div>
-    备注:<textarea></textarea>
-</div>
-<div>
-    <input type="submit" value="submit提交">
-    <input type="button" value="button">
+    <div>
+        性别：<input type="radio" name="sex" value="0">男
+        <input type="radio" name="sex" value="1">女
+    </div>
+    <div>
+        爱好：<input type="checkbox" name="sex" value="10">篮球
+        <input type="checkbox" name="sex" value="10">足球
+        <input type="checkbox" name="sex" value="10">乒乓球
+    </div>
+
+    <div>
+        城市:
+        <select name="citys">
+            <option value="bj">北京</option>
+            <option value="sh">上海</option>
+            <option value="sz">深圳</option>
+        </select>
+    </div>
+    <div>
+        领域:
+        <select multiple>
+            <option value="bj">打游戏</option>
+            <option value="sh">上海</option>
+            <option value="sz">深圳</option>
+        </select>
+    </div>
+    <div>
+        备注:<textarea></textarea>
+    </div>
+    <div>
+        <input type="submit">
+</form>
+<input type="submit" value="submit提交">
+<input type="button" value="button">
 </div>
