--- a/PythonTraining/路飞/Django/day16/app01/templates/order_list.html
+++ b/PythonTraining/路飞/Django/day16/app01/templates/order_list.html
@@ -2,12 +2,59 @@
 
 {% block content %}
     <div class="container">
-        <div>
+        <div style="margin-bottom: 10px;">
             <input type="button" value="新建订单1" class="btn-primary btn" data-toggle="modal"
                    data-target="#myModal">
             <input id="btnAdd" type="button" value="新建订单2" class="btn-primary btn">
         </div>
+        <div class="bs-example" data-example-id="panel-without-body-with-table">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">
+                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>订单列表
+                </div>
+
+                <!-- Table -->
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>订单号</th>
+                        <th>名称</th>
+                        <th>价格</th>
+                        <th>状态</th>
+                        <th>管理员</th>
+                        <th>操作</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for item in queryset %}
+                        <tr>
+                        <th scope="row">{{ item.id }}</th>
+                        <td>{{ item.oid }}</td>
+                        <td>{{ item.title }}</td>
+                        <td>{{ item.price }}</td>
+                        <td>{{ item.get_status_display }}</td>
+                        <td>{{ item.admin.username }}</td>
+
+                        <td>
+                            <a class="btn btn-primary btn-xs" href="">编辑</a>
+                            <a class="btn btn-danger btn-xs" href="">删除</a>
+                        </td>
+                    {% endfor %}
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="clearfix">
+                <ul class="pagination">
+                    {{ pagestring }}
+                </ul>
+            </div>
+        </div>
+
     </div>
+
 
     <!-- 新建订单对话框 -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -78,7 +125,13 @@
                     success: function (res) {
                         // console.log(res)
                         if (res.status) {
-                            alert("创建成功");
+                            //alert("创建成功");
+                            //清空表单
+                            $("#formAdd")[0].reset();
+                            //关闭对话框
+                            $('#myModal').modal('hide');
+                            //用js实现页面的刷新
+                            location.reload();
                         } else {
                             //把错误信息显示在对话框中
                             $.each(res.error, function (name, errorList) {
