重写监控截图上传

--- a/PythonTraining/路飞/Django/day16/app01/templates/layout.html
+++ b/PythonTraining/路飞/Django/day16/app01/templates/layout.html
@@ -39,6 +39,7 @@
                 <li><a href="/shoujihao/list/">手机号管理</a></li>
                 <li><a href="/task/list/">任务管理</a></li>
                 <li><a href="/webcam/list/">监控截图</a></li>
+                <li><a href="/webcam/upload/">上传截图</a></li>
                 <li><a href="/order/list/">订单管理</a></li>
             </ul>
 
