--- a/PythonTraining/路飞/Django/day16/app01/templates/webcam/webcam_list.html
+++ b/PythonTraining/路飞/Django/day16/app01/templates/webcam/webcam_list.html
@@ -39,6 +39,7 @@
                         <th>ID</th>
                         <th>文件名</th>
                         <th>截图</th>
+                        <th>上传时间</th>
                         <th>截图时间</th>
                         <th>操作</th>
                     </tr>
@@ -48,14 +49,15 @@
                         <tr>
                         <th scope="row">{{ item.id }}</th>
                         <td>{{ item.file_name }}</td>
-                        <td class="col-xs-6">
+                        <td>
                             <a href="/media/{{ item.img }}">
                                 <img style="width: 250px;" src="/media/{{ item.img }}">
                             </a>
                         </td>
-                        <td>{{ item.create_datetime }}</td>
+                        <td>{{ item.capture_datetime|date:"Y-m-d H:m:s" }}</td>
+                        <td>{{ item.create_datetime|date:"Y-m-d H:m:s"}}</td>
 
-                        <td>{{ item.capture_date|date:"Y-m-d H:m:s" }}</td>
+
                         <td>
                             <a class="btn btn-primary btn-xs" href="/shoujihao/{{ item.id }}/edit/">编辑</a>
                             <a class="btn btn-danger btn-xs"
