--- a/PythonTraining/路飞/Django/day16/app01/templates/webcam/webcam_list.html
+++ b/PythonTraining/路飞/Django/day16/app01/templates/webcam/webcam_list.html
@@ -22,15 +22,16 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>监控截图列表
-                </div>
-                <div>
+                    <span class="glyphicon glyphicon-th-list" aria-hidden="true">监控截图列表</span>
                     <form method="post" enctype="multipart/form-data" action="/webcam/upload/">
                         {% csrf_token %}
                         {{ form }}
                         <span style="color: red">{{ form.errors.0 }}</span>
                         <input type="submit" value="上传">
                     </form>
+                </div>
+                <div>
+
                 </div>
 
                 <!-- Table -->
@@ -56,7 +57,7 @@
                             </a>
                         </td>
                         <td>{{ item.capture_datetime|date:"Y-m-d H:m:s" }}</td>
-                        <td>{{ item.create_datetime|date:"Y-m-d H:m:s"}}</td>
+                        <td>{{ item.create_datetime|date:"Y-m-d H:m:s" }}</td>
                         <td>
                             <a class="btn btn-primary btn-xs" href="">编辑</a>
                             <a class="btn btn-danger btn-xs"
