--- a/PythonTraining/路飞/Django/day16/app01/templates/layout.html
+++ b/PythonTraining/路飞/Django/day16/app01/templates/layout.html
@@ -32,15 +32,23 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/admin/list/">管理员账户</a></li>
-                <li><a href="/depart/list/">部门管理</a></li>
-                <li><a href="/user/list/">用户管理</a></li>
-                <li><a href="/prettynum/list/">靓号管理</a></li>
-                <li><a href="/shoujihao/list/">手机号管理</a></li>
-                <li><a href="/task/list/">任务管理</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">功能管理 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/list/">管理员账户</a></li>
+                        <li><a href="/depart/list/">部门管理</a></li>
+                        <li><a href="/user/list/">用户管理</a></li>
+                        <li><a href="/prettynum/list/">靓号管理</a></li>
+                        <li><a href="/shoujihao/list/">手机号管理</a></li>
+                        <li><a href="/task/list/">任务管理</a></li>
+                    </ul>
+                </li>
+
                 <li><a href="/webcam/list/">监控截图</a></li>
                 <li><a href="/webcam/upload/">上传截图</a></li>
                 <li><a href="/order/list/">订单管理</a></li>
+                <li><a href="/chart/list/">数据统计</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
